# iviewer

./: .gitignore  README.md  pyproject.toml
src/iviewer/: __init__.py  cli.py  group_widget.py  mask_highlight_widget.py  napari.yaml  reader.py  rsfish_widget.py  viewer.py
