[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iviewer"
version = "0.1.0"
description = "cycleHCR 3D Visualization with napari"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Alan Liu"}
]
keywords = ["napari", "visualization", "cycleHCR", "spatial-transcriptomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "napari[all]>=0.4.18",
    "napari-orthogonal-views",
    "numpy",
    "pandas",
    "tifffile",
    "PyOpenGL",
]

[project.scripts]
iviewer = "iviewer.cli:main"

[project.urls]
Homepage = "https://github.com/alanliu/iviewer"

[tool.setuptools.packages.find]
where = ["src"]
